# Forge-IDE-Custom-IDE-

./: .gitignore  CMakeLists.txt  README.md  build.bat  test_input.cpp  test_input.py
resources/: convert_icon.py  generate_icon_assets.py
src/: main.cpp
src/core/: Engine.cpp  Engine.hpp  Workspace.cpp  Workspace.hpp
src/ui/: Panel.hpp  UIManager.cpp  UIManager.hpp  app_icon.hpp
src/ui/panels/: EditorPanel.cpp  EditorPanel.hpp  FileExplorerPanel.cpp  FileExplorerPanel.hpp  OtherPanels.hpp  TerminalPanel.cpp  TerminalPanel.hpp
src/ui/terminal/: ConPTY.cpp  ConPTY.hpp  TerminalCell.hpp  TerminalEmulator.cpp  TerminalEmulator.hpp  TerminalProfile.hpp  TerminalSession.cpp  TerminalSession.hpp  UnrealGitHelper.hpp
src/utils/: Logger.cpp  Logger.hpp
